# emu_lib_web_ssr

./: .env  .gitignore  Cargo.toml  Dockerfile  diesel.toml  docker-compose-release.yml  docker-compose.yml  run_stylance.sh
.github/workflows/: applyk8s.yml  deploy.yml  deployk8s.yml  dockerhub.yml  documentation.yml  updatedns.yml
app/: Cargo.toml  build.rs
app/src/: error.module.scss  error.rs  error_template.rs  footer.module.scss  footer.rs  header.module.scss  header.rs  home.module.scss  home.rs  lib.rs  password.rs
app/src/auth/: api.rs  auth.module.scss  login.rs  mod.rs  register.rs
app/src/author/: mod.rs  resume.module.scss  resume.rs
app/src/dashboard/: api.rs  dashboard.module.scss  mod.rs
app/src/db/: mod.rs  password.rs
app/src/db/models/: mod.rs  program.rs  schema.rs  session.rs  user.rs
app/src/db/models/challenge/: mod.rs
app/src/db/models/challenge/requirements/: memory.rs  mod.rs
app/src/emulator/: control.rs  disassembler.rs  memory.rs  mod.rs
app/src/server/: mod.rs
app/src/utils/: cookie.rs  cookie2.rs  fetch.rs  logger.rs  mod.rs
c_z80_compiler/: Dockerfile  Makefile  api.py  main.c.asm
ccompiler/: .dockerupdate  Dockerfile  Makefile  api.py  main.c  pansinwave.c  pulsatingcircle.c  rainbowclear.c  requirements.txt  text.c
ccompiler/proj/: circles.c  sin_wave.c
compiler_api/: Makefile  api.py  main.c
db/: .dockerupdate  Dockerfile  docker-compose.yml
db/initdb/: 00settings.sql  01init.sql  01user.sql  101user.sql  102data.sql  103challenges.sql  99other.sql
doc/: Dockerfile  Makefile  doc.bib  doc.tex  docker.sty  yaml.sty
frontend/: Cargo.toml
frontend/src/: lib.rs
k8s/: secret.yml
k8s/ccompiler/: deployment.yml  service.yml
k8s/db/: deployment.yml  pvc.yml  service.yml  storageclass.yml
k8s/web/: cert.yml  deployment.yml  ingress.yml  service.yml
other/c_compiler/: Makefile  main.c
other/doc/: Makefile  doc.bib  doc.tex
server/: .env  Cargo.toml
server/src/: fileserv.rs  main.rs  middleware.rs  schema.rs
server/src/api/: mod.rs  user.rs
server/src/api/emulator/: mod.rs  rom.rs  state.rs
server/src/models/: mod.rs  session.rs  user.rs
style/: colors.scss  main.scss
web/: .dockerignore  .dockerupdate  .gitignore  Cargo.toml  Dockerfile  build.sh  run_stylance.sh  run_watch_dev.sh  rustc-ice-2025-01-30T21_59_10-549843.txt
web/app/: Cargo.toml
web/app/src/: error.module.scss  error.rs  header.module.scss  header.rs  home.module.scss  home.rs  lib.rs
web/app/src/auth/: api.rs  auth.module.scss  bg_text.txt  login.rs  mod.rs  register.rs
web/app/src/author/: mod.rs  resume.module.scss  resume_data.rs  resume_view.rs
web/app/src/dashboard/: api.rs  dashboard.module.scss  mod.rs
web/app/src/db/: mod.rs  password.rs
web/app/src/db/models/: schema.rs  session.rs  user.rs
web/app/src/db/models/challenge/: mod.rs
web/app/src/db/models/challenge/requirements/: memory.rs
web/app/src/emulator/: CCodeExample  account.rs  control.rs  disassembler.rs  display.rs  editor.rs  emulator.module.scss  info.rs  memory.rs  mod.rs  registers.rs
web/app/src/utils/: ccompiler.rs  cookie.rs  highlighter.rs  icons.rs  logger.rs  mod.rs
web/frontend/src/: lib.rs
web/server/src/: fileserv.rs  main.rs  middleware.rs
web/style/: colors.scss  main.scss
web/style/stylance/: _index.scss  auth.module-388e8f5.scss  dashboard.module-4d560f3.scss  emulator.module-9bb08bb.scss  error.module-81863ff.scss  footer.module-6ad772d.scss  header.module-aae73a9.scss  home.module-b6ac988.scss  resume.module-7dceb1e.scss
