[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emu_lib_ui = { git = "https://github.com/mirage2032/rs_emu_lib_ui.git", default-features = false }
stylance = "0.5.1"
uuid = { version = "1.10.0", features = ["v4"] }
argon2 = { version="0.6.0-pre.1", features = ["std"] }
time = "0.3.36"
serde = { version = "1.0.210", features = ["derive"] }
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos-use = { version="0.13.5"}
codee = "0.2.0"
regex = "1.10.6"

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum.workspace = true
axum-extra.workspace = true
diesel = {version = "2.2.4", features = ["postgres", "r2d2"]}

[build-dependencies]
emu_lib_ui = { git = "https://github.com/mirage2032/rs_emu_lib_ui.git", default-features = false }
pkg-config = "0.3.30"
serde_json = "1.0.128"

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "emu_lib_ui/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "emu_lib_ui/ssr", "dep:leptos_axum"]

[package.metadata.stylance]
output_dir = "../style/"