[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emu_lib = { git = "https://github.com/mirage2032/rs_emu_lib.git", default-features = false }
stylance = "0.5.1"
uuid = { version = "1.10.0", features = ["v4"] }
argon2 = { version="0.6.0-pre.1", features = ["std"] }
time = "0.3.36"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
url = { version="2.5.2",features=["serde"] }
chrono = {version="0.4.38", features = ["serde"]}

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use = "0.14.0-gamma2"
leptos_axum = { workspace = true, optional = true }

wasm-cookies = "0.2.1"
codee = "0.2.0"
regex = "1.10.6"
gloo = { version="0.11.0",features = ["futures"] }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version="0.6.0",features = ["json"] }
send_wrapper = "0.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest.workspace = true
axum.workspace = true
axum-extra.workspace = true
diesel = {version = "2.2.4", features = ["postgres", "r2d2"]}
diesel-derive-enum = {version="2.1.0", features = ["postgres"] }

[build-dependencies]
emu_lib_ui = { git = "https://github.com/mirage2032/rs_emu_lib_ui.git", default-features = false }
pkg-config = "0.3.30"
serde_json = "1.0.128"
walkdir = "2.5.0"

[features]
default = []
hydrate = ["leptos/hydrate", "emu_lib_ui/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "emu_lib_ui/ssr", "dep:leptos_axum"]

[package.metadata.stylance]
output_dir = "../style/"