[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.2.4", features = ["postgres", "r2d2"]}
app = { path = "../app", default-features = false, features = ["ssr"] }
serde = { version = "1.0.210", features = ["derive"] }
axum-macros = "0.4.1"
axum-extra = {version = "0.9.3", features = ["cookie"]}
time = "0.3.36"
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true
axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
log.workspace = true