[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.7.1"
emu_lib = { git = "https://github.com/mirage2032/rs_emu_lib.git", default-features = false }
time = "0.3.37"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
url = { version = "2.5.4", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
oauth2 = "5.0.0"
base64 = "0.22.1"
server_fn.workspace = true
#reactive_graph.workspace = true
#syntastica = {version = "0.6.0" , default-features = false, features = ["runtime-c2rust","serde"] }


stylance.workspace = true
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos-use.workspace = true
wasm-bindgen-futures = "0.4.50"
leptos_axum = { workspace = true, optional = true }

#wasm-cookies = "0.2.1"
#codee = "0.2.0"
regex = "1.11.1"
gloo = { version = "0.11.0", features = ["futures"] }

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6.0", features = ["json"] }
send_wrapper = "0.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
argon2 = { version = "0.6.0-pre.1" }
uuid = { version = "1.12.1", features = ["v4"] }
rand = { version = "0.9.1"}
form_urlencoded = "1.2.1"
google-oauth = { version = "1.11.3" }
reqwest.workspace = true
axum.workspace = true
axum-extra.workspace = true
diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
pq-sys = {version = "0.7.1", features = ["bundled"]}

[build-dependencies]
pkg-config = "0.3.30"
serde_json = "1.0.137"
walkdir = "2.5.0"

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
  "leptos-use/ssr",
  "leptos-use/axum"
]

[package.metadata.stylance]
output_dir = "../style/"
scss_prelude = '@use "../colors" as *;'
